# hermes-feishu-streaming-card

./: .gitignore  AGENTS.md  CHANGELOG.md  README-install.md  README.en.md  README.md  TODO.md  config.yaml.example  docker-compose.example.yml  install-docker.sh  install.ps1  install.sh  pyproject.toml
docs/: architecture.en.md  architecture.md  event-protocol.en.md  event-protocol.md  installer-safety.en.md  installer-safety.md  migration.en.md  migration.md  release-notes-v3.10.0.md  release-notes-v3.6.0.md  release-notes-v3.6.2.md  release-notes-v3.6.6.md  release-notes-v3.7.0.md  release-notes-v3.8.0.md  release-notes-v3.8.11.md  release-notes-v3.8.13.md  release-notes-v3.8.14.md  release-notes-v3.8.18.md  release-notes-v3.8.3.md  release-notes-v3.8.6.md  release-notes-v3.8.7.md  release-notes-v3.9.0.md  release-notes-v3.9.1.md  release-notes-v4.0.0.en.md  release-notes-v4.0.0.md  release-notes-v4.0.10.en.md  release-notes-v4.0.10.md  release-notes-v4.0.11.en.md  release-notes-v4.0.11.md  release-notes-v4.0.12.en.md  release-notes-v4.0.12.md  release-notes-v4.0.13.en.md  release-notes-v4.0.13.md  release-notes-v4.0.14.en.md  release-notes-v4.0.14.md  release-notes-v4.0.15.en.md  release-notes-v4.0.15.md  release-notes-v4.0.16.en.md  release-notes-v4.0.16.md  release-notes-v4.0.17.en.md  (+27 more)
hermes_feishu_card/: __init__.py  bots.py  card_timeline.py  cli.py  config.py  diagnostics.py  event_auth.py  events.py  feishu_client.py  flush.py  hook_runtime.py  lifecycle.py  metrics.py  operations.py  operations_transport.py  process.py  profile_sources.py  render.py  runner.py  (+5 more)
(+85 files in other folders)
